fixed overlapping of SideNav with website page header

--- a/website/app/styles/pages/components/side-nav.scss
+++ b/website/app/styles/pages/components/side-nav.scss
@@ -8,7 +8,8 @@
 #show-content-components-side-nav {
   .doc-sidenav-demo,
   .doc-sidenav-demo--short,
-  .doc-sidenav-demo--custom-width {
+  .doc-sidenav-demo--custom-width,
+  .doc-sidenav-demo--cloud-ui {
     .hds-side-nav {
       z-index: 0;
       min-height: auto;
